# project_scraper

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
scraper/models/: vacuum.py
scraper/scrapers/: base.py  bigbox.py
